--- a/src/app/views/categories/categories/categories.component.css
+++ b/src/app/views/categories/categories/categories.component.css
@@ -1,3 +1,53 @@
 .pointer {
     cursor: pointer;
 }
+.edit-category-icon-area{
+    width: 15%;
+    display: inline-block;
+    text-align: left;
+    font-size: 13px;
+}
+.category-title{
+    width: 70%;
+    display: inline-block;
+    font-size: 16px;
+}
+.all-category-title{
+    width: 85%;
+    display: inline-block;
+    font-size: 16px;
+}
+.edit-category-icon{
+    color: #dadada;
+}
+.add-icon{
+    cursor: pointer;
+    font-size: 25px;
+    vertical-align: middle;
+}
+.nav-title{
+    width: 85%;
+    display: inline-block;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: middle;
+}
+span.add-icon-area{
+    width: 15%;
+    display: inline-block;
+    text-align: left;
+}
+#categories{
+    width: 100%;
+    overflow-x: hidden;
+}
+
+.uncompleted-count{
+    background-color: #eaeaea;
+    border-radius: 3px;
+    padding: 5px;
+    color: black;
+    width: 15%;
+    display: inline-block;
+    text-align: center;
+}
