--- a/src/app/views/tasks/tasks/tasks.component.css
+++ b/src/app/views/tasks/tasks/tasks.component.css
@@ -1,7 +1,65 @@
 .completed{
     text-decoration: line-through;
-    color: #797979;
+    color: green;
 }
 .novalue{
-    color: #b7b7b7;
+    color: yellow;
+}
+.col-id{
+    width: 4%;
+    text-align: center !important;
+}
+.col-color {
+    width: 1% !important;
+}
+.col-title{
+    width: 40%;
+    margin: auto auto;
+    text-decoration: none !important;
+}
+.col-priority{
+    width: 10%;
+}
+.col-select{
+    width: 3%;
+}
+.col-operations{
+    width: 8%;
+}
+.col-category{
+    width: 10%;
+}
+@import '~@angular/material/prebuilt-themes/purple-green.css';
+
+.delete-icon{
+    cursor: pointer;
+    color: #ea6561;
+    font-size: 18px;
+    margin: 0 3px;
+}
+.edit-icon{
+    cursor: pointer;
+    color: #9a9a9a;
+    font-size: 18px;
+    margin: 0 3px;
+}
+.mat-header-cell{
+    font-size: 1.063rem;
+    color: #9c27b0 !important;
+    font-weight: normal;
+}
+.mat-column-color{
+    width: 1% !important;
+}
+.mat-cell{
+    padding-top: 1%;
+}
+
+.checkbox{
+    padding-top: 10px !important;
+    position: absolute;
+}
+.pointer {
+    cursor: pointer;
+    text-decoration: underline;
 }
