--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
 @import "assets/css/material-dashboard.css";
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+
+.not-found{
+    margin-top: 30px;
+    font-size: 20px;
+    color: rgba(74,74,74,0.98);
+    text-align: center;
+}
+.pointer{
+    cursor: pointer;
+}
+.size25{
+    font-size: 25px !important;
+
+}
+.mat-form-field{
+    width:  100%;
+}
+.mat-dialog-container{
+    padding: 40px !important;
+}
+.red{
+    color: red;
+}
+.link{
+    cursor: pointer;
+    text-decoration: underline;
+}
+.line{
+    border-bottom: 1px solid #dadada;
+    padding-top: 20px;
+}
+.gray{
+    color: #8f8f8f;
+}
+app-header{
+    margin: 50px !important;
+}
